# MultiscaleModelling19

./: .graphqlconfig
client/: README.md  nuxt.config.js  package-lock.json  package.json
client/pages/: index.vue
client/plugins/: apollo.js
server/: pyproject.toml  run-dev.sh  schema.graphql
server/server/: app.py  schema.py  sim.py
